Fix alignment for desktop grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,16 +343,17 @@ header {
     "restart cards"
     "how-to-play cards"
     "footer footer";
-  margin: 3px auto auto;
+  margin: 3px auto auto 0px;
+  left: 0px;
 }
 
-  #logo-header {grid-area: logo;margin: 0px auto;}
+  #logo-header {grid-area: logo;margin: 0px auto;margin-right: 1rem !important;}
   #header-buttons {grid-area: logo;}
   #header-button-container{grid-area: logo; margin: 0px auto;}
   #card-deck {grid-area: cards;}
-  #turns-left-section {grid-area: turns-count;}
-  #restart-section {grid-area: restart;}
-  #how-to-play {grid-area: how-to-play;}
+  #turns-left-section {grid-area: turns-count;/* margin-right: 1rem !important; */text-align: right;}
+  #restart-section {grid-area: restart;/* text-align: right; */margin-right: 1rem !important;}
+  #how-to-play {grid-area: how-to-play;margin-right: 1rem !important;}
 }
 
 /*---------------SKELETON PLANE BY FEATURE---------------*/
@@ -447,6 +448,7 @@ header {
     align-items: center;
     flex-direction: row;
     z-index: 99;
+    margin-right: 1rem;
   } 
 }
   
@@ -602,6 +604,7 @@ header {
     height: 45em;
     max-width: 45em;
     max-height: 45em;
+    margin-left: 3rem;
   }
 }
 
